<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/homeActivityRoot"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp">

    <!-- Welcome Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/text_background"
        android:text="@string/welcome_to_sudoku"
        android:textSize="24sp"
        android:layout_marginBottom="32dp"/>

    <Button
        android:id="@+id/statsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_button"
        android:layout_marginTop="8dp" />
    <!-- Load Button -->
    <Button
        android:id="@+id/loadGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_game"
        android:layout_marginTop="8dp" />

    <!-- Easy Button -->
    <Button
        android:id="@+id/easyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easy_button"
        android:layout_marginTop="8dp" />

    <!-- Medium Button -->
    <Button
        android:id="@+id/mediumButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/medium_button"
        android:layout_marginTop="8dp" />

    <!-- Hard Button -->
    <Button
        android:id="@+id/hardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard_button"
        android:layout_marginTop="8dp" />
</LinearLayout>
