<resources>
    <string name="app_name">Sudoku</string>
    <string name="check_solution_button">Check Solution</string>
    <string name="welcome_to_sudoku">Welcome to Sudoku</string>
    <string name="start_game_button">Start Game</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="easy_button">Easy</string>
    <string name="medium_button">Medium</string>
    <string name="hard_button">Hard</string>
    <string name="load_game">Load Game</string>
    <string name="save_game">Save Game</string>
    <string name="title_activity_load">Load Activity</string>
    <string name="saved_games">Saved Games</string>
    <string name="board_name_input">Enter Board Name</string>
    <string name="confirm_save">Confirm Save</string>
    <string name="Sudoku">Sudoku</string>
    <string name="elapsed_time">00:00</string>
    <string name="board_name">Board Name</string>
    <string name="sub_menu_settings">Settings</string>
    <string name="return_to_game">Return</string>
    <string name="sub_menu_error_check">Error Check</string>
    <string name="sub_menu_save_game">Save Game</string>
    <string name="sub_menu_main_manu">Main Menu</string>
    <string name="sub_menu_exit">Exit</string>
    <string name="no_save_games_available">No saved games available</string>
    <string name="clear_all">Clear All</string>
    <string name="time">%1$s, %2$s, Completeness: %3$s</string>
    <string name="back">Back</string>
    <string name="delete_button">Delete</string>
    <string name="play_button">Play</string>
    <string name="total_saved_boards">Total Saved Boards: %1$d</string>
    <string name="total_finished_boards">Total Finished Boards: %1$d</string>
    <string name="avg_completion_time">Average Completion Time: %1$s</string>
    <string name="total_time">Total Time Play: %1$s</string>
    <string name="status_button">Stats</string>
    <string name="stats_title">Statistics</string>
</resources>